css tweaks, change about me image, fix paddings, set z-indexes

--- a/app/globals.css
+++ b/app/globals.css
@@ -33,7 +33,7 @@ body {
 .content-grid,
 .full {
   --padding-inline: 1rem;
-  --content-max-width: 120ch;
+  --content-max-width: 115ch;
   --breakout-max-width: 150ch;
   --breakout-size: calc(
     (var(--breakout-max-width) - var(--content-max-width)) / 2
@@ -77,7 +77,7 @@ body {
     content: "";
     position: absolute;
     inset: 0;
-    background-color: #616161;
+    /*background-color: #616161;  testing */
     z-index: -1;
     border-radius: 8px;
     transform: scale(0.99);
